phase 2 claude ai refactoring et nettoyage deplacement fichier env.exemple et creation .gitignore